Archive2/7e/359e8213418710/output
main.cpp: In lambda function:
main.cpp:20:32: error: 'x' was not declared in this scope
         ss << _func << ": " << x;
                                ^
